--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,48 +719,165 @@
     "X = X.to_dask_array(lengths=True)\n",
     "y = y_train_df\n",
     "y = y.to_dask_array(lengths=True)\n",
-    "\n",
-    "X.shape"
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr>\n",
+       "<td>\n",
+       "<table>  <thead>    <tr><td> </td><th> Array </th><th> Chunk </th></tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr><th> Bytes </th><td> 3.68 GB </td> <td> 50.99 MB </td></tr>\n",
+       "    <tr><th> Shape </th><td> (2840141, 162) </td> <td> (39342, 162) </td></tr>\n",
+       "    <tr><th> Count </th><td> 664 Tasks </td><td> 83 Chunks </td></tr>\n",
+       "    <tr><th> Type </th><td> float64 </td><td> numpy.ndarray </td></tr>\n",
+       "  </tbody></table>\n",
+       "</td>\n",
+       "<td>\n",
+       "<svg width=\"75\" height=\"170\" style=\"stroke:rgb(0,0,0);stroke-width:1\" >\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"0\" y1=\"0\" x2=\"25\" y2=\"0\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"0\" y1=\"1\" x2=\"25\" y2=\"1\" />\n",
+       "  <line x1=\"0\" y1=\"2\" x2=\"25\" y2=\"2\" />\n",
+       "  <line x1=\"0\" y1=\"4\" x2=\"25\" y2=\"4\" />\n",
+       "  <line x1=\"0\" y1=\"5\" x2=\"25\" y2=\"5\" />\n",
+       "  <line x1=\"0\" y1=\"7\" x2=\"25\" y2=\"7\" />\n",
+       "  <line x1=\"0\" y1=\"8\" x2=\"25\" y2=\"8\" />\n",
+       "  <line x1=\"0\" y1=\"10\" x2=\"25\" y2=\"10\" />\n",
+       "  <line x1=\"0\" y1=\"11\" x2=\"25\" y2=\"11\" />\n",
+       "  <line x1=\"0\" y1=\"12\" x2=\"25\" y2=\"12\" />\n",
+       "  <line x1=\"0\" y1=\"14\" x2=\"25\" y2=\"14\" />\n",
+       "  <line x1=\"0\" y1=\"15\" x2=\"25\" y2=\"15\" />\n",
+       "  <line x1=\"0\" y1=\"17\" x2=\"25\" y2=\"17\" />\n",
+       "  <line x1=\"0\" y1=\"18\" x2=\"25\" y2=\"18\" />\n",
+       "  <line x1=\"0\" y1=\"19\" x2=\"25\" y2=\"19\" />\n",
+       "  <line x1=\"0\" y1=\"21\" x2=\"25\" y2=\"21\" />\n",
+       "  <line x1=\"0\" y1=\"22\" x2=\"25\" y2=\"22\" />\n",
+       "  <line x1=\"0\" y1=\"24\" x2=\"25\" y2=\"24\" />\n",
+       "  <line x1=\"0\" y1=\"25\" x2=\"25\" y2=\"25\" />\n",
+       "  <line x1=\"0\" y1=\"27\" x2=\"25\" y2=\"27\" />\n",
+       "  <line x1=\"0\" y1=\"28\" x2=\"25\" y2=\"28\" />\n",
+       "  <line x1=\"0\" y1=\"29\" x2=\"25\" y2=\"29\" />\n",
+       "  <line x1=\"0\" y1=\"31\" x2=\"25\" y2=\"31\" />\n",
+       "  <line x1=\"0\" y1=\"32\" x2=\"25\" y2=\"32\" />\n",
+       "  <line x1=\"0\" y1=\"34\" x2=\"25\" y2=\"34\" />\n",
+       "  <line x1=\"0\" y1=\"35\" x2=\"25\" y2=\"35\" />\n",
+       "  <line x1=\"0\" y1=\"37\" x2=\"25\" y2=\"37\" />\n",
+       "  <line x1=\"0\" y1=\"38\" x2=\"25\" y2=\"38\" />\n",
+       "  <line x1=\"0\" y1=\"40\" x2=\"25\" y2=\"40\" />\n",
+       "  <line x1=\"0\" y1=\"41\" x2=\"25\" y2=\"41\" />\n",
+       "  <line x1=\"0\" y1=\"42\" x2=\"25\" y2=\"42\" />\n",
+       "  <line x1=\"0\" y1=\"44\" x2=\"25\" y2=\"44\" />\n",
+       "  <line x1=\"0\" y1=\"45\" x2=\"25\" y2=\"45\" />\n",
+       "  <line x1=\"0\" y1=\"47\" x2=\"25\" y2=\"47\" />\n",
+       "  <line x1=\"0\" y1=\"48\" x2=\"25\" y2=\"48\" />\n",
+       "  <line x1=\"0\" y1=\"50\" x2=\"25\" y2=\"50\" />\n",
+       "  <line x1=\"0\" y1=\"51\" x2=\"25\" y2=\"51\" />\n",
+       "  <line x1=\"0\" y1=\"52\" x2=\"25\" y2=\"52\" />\n",
+       "  <line x1=\"0\" y1=\"54\" x2=\"25\" y2=\"54\" />\n",
+       "  <line x1=\"0\" y1=\"55\" x2=\"25\" y2=\"55\" />\n",
+       "  <line x1=\"0\" y1=\"57\" x2=\"25\" y2=\"57\" />\n",
+       "  <line x1=\"0\" y1=\"58\" x2=\"25\" y2=\"58\" />\n",
+       "  <line x1=\"0\" y1=\"60\" x2=\"25\" y2=\"60\" />\n",
+       "  <line x1=\"0\" y1=\"61\" x2=\"25\" y2=\"61\" />\n",
+       "  <line x1=\"0\" y1=\"63\" x2=\"25\" y2=\"63\" />\n",
+       "  <line x1=\"0\" y1=\"64\" x2=\"25\" y2=\"64\" />\n",
+       "  <line x1=\"0\" y1=\"66\" x2=\"25\" y2=\"66\" />\n",
+       "  <line x1=\"0\" y1=\"67\" x2=\"25\" y2=\"67\" />\n",
+       "  <line x1=\"0\" y1=\"69\" x2=\"25\" y2=\"69\" />\n",
+       "  <line x1=\"0\" y1=\"70\" x2=\"25\" y2=\"70\" />\n",
+       "  <line x1=\"0\" y1=\"72\" x2=\"25\" y2=\"72\" />\n",
+       "  <line x1=\"0\" y1=\"73\" x2=\"25\" y2=\"73\" />\n",
+       "  <line x1=\"0\" y1=\"75\" x2=\"25\" y2=\"75\" />\n",
+       "  <line x1=\"0\" y1=\"76\" x2=\"25\" y2=\"76\" />\n",
+       "  <line x1=\"0\" y1=\"78\" x2=\"25\" y2=\"78\" />\n",
+       "  <line x1=\"0\" y1=\"79\" x2=\"25\" y2=\"79\" />\n",
+       "  <line x1=\"0\" y1=\"80\" x2=\"25\" y2=\"80\" />\n",
+       "  <line x1=\"0\" y1=\"82\" x2=\"25\" y2=\"82\" />\n",
+       "  <line x1=\"0\" y1=\"83\" x2=\"25\" y2=\"83\" />\n",
+       "  <line x1=\"0\" y1=\"85\" x2=\"25\" y2=\"85\" />\n",
+       "  <line x1=\"0\" y1=\"86\" x2=\"25\" y2=\"86\" />\n",
+       "  <line x1=\"0\" y1=\"88\" x2=\"25\" y2=\"88\" />\n",
+       "  <line x1=\"0\" y1=\"89\" x2=\"25\" y2=\"89\" />\n",
+       "  <line x1=\"0\" y1=\"91\" x2=\"25\" y2=\"91\" />\n",
+       "  <line x1=\"0\" y1=\"92\" x2=\"25\" y2=\"92\" />\n",
+       "  <line x1=\"0\" y1=\"94\" x2=\"25\" y2=\"94\" />\n",
+       "  <line x1=\"0\" y1=\"95\" x2=\"25\" y2=\"95\" />\n",
+       "  <line x1=\"0\" y1=\"96\" x2=\"25\" y2=\"96\" />\n",
+       "  <line x1=\"0\" y1=\"98\" x2=\"25\" y2=\"98\" />\n",
+       "  <line x1=\"0\" y1=\"99\" x2=\"25\" y2=\"99\" />\n",
+       "  <line x1=\"0\" y1=\"101\" x2=\"25\" y2=\"101\" />\n",
+       "  <line x1=\"0\" y1=\"102\" x2=\"25\" y2=\"102\" />\n",
+       "  <line x1=\"0\" y1=\"104\" x2=\"25\" y2=\"104\" />\n",
+       "  <line x1=\"0\" y1=\"105\" x2=\"25\" y2=\"105\" />\n",
+       "  <line x1=\"0\" y1=\"106\" x2=\"25\" y2=\"106\" />\n",
+       "  <line x1=\"0\" y1=\"108\" x2=\"25\" y2=\"108\" />\n",
+       "  <line x1=\"0\" y1=\"109\" x2=\"25\" y2=\"109\" />\n",
+       "  <line x1=\"0\" y1=\"111\" x2=\"25\" y2=\"111\" />\n",
+       "  <line x1=\"0\" y1=\"112\" x2=\"25\" y2=\"112\" />\n",
+       "  <line x1=\"0\" y1=\"114\" x2=\"25\" y2=\"114\" />\n",
+       "  <line x1=\"0\" y1=\"115\" x2=\"25\" y2=\"115\" />\n",
+       "  <line x1=\"0\" y1=\"117\" x2=\"25\" y2=\"117\" />\n",
+       "  <line x1=\"0\" y1=\"118\" x2=\"25\" y2=\"118\" />\n",
+       "  <line x1=\"0\" y1=\"120\" x2=\"25\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"0\" y1=\"0\" x2=\"0\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"25\" y1=\"0\" x2=\"25\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"0.000000,0.000000 25.412617,0.000000 25.412617,120.000000 0.000000,120.000000\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Text -->\n",
+       "  <text x=\"12.706308\" y=\"140.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" >162</text>\n",
+       "  <text x=\"45.412617\" y=\"60.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(-90,45.412617,60.000000)\">2840141</text>\n",
+       "</svg>\n",
+       "</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
       "text/plain": [
-       "dask.array.core.Array"
+       "dask.array<concatenate, shape=(2840141, 162), dtype=float64, chunksize=(39342, 162)>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "X_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3155759, 1)"
+       "(34015, 1)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y.shape"
+    "y_train.shape"
    ]
   },
   {
